--- a/layouts/legend/single.html
+++ b/layouts/legend/single.html
@@ -1,6 +1,7 @@
 {{ define "main" }}
-<header class="page-header legend">
-    <h1>{{.Title}} <i class="fa-solid fa-network-wired"></i></h1>
+<header class="page-header">
+    <h1>{{.Title}} <i class="fa-solid fa-list"></i></h1>
+    
 </header>
 
 <header class="page-header">
