--- a/assets/css/common/header.css
+++ b/assets/css/common/header.css
@@ -48,6 +48,11 @@ body.dark #moon {
 
 body:not(.dark) #sun {
     display: none;
+    fill: var(--header-icon);
+}
+
+#moon, #sun {
+    stroke: var(--header-icon);
 }
 
 #menu {
@@ -80,6 +85,7 @@ body:not(.dark) #sun {
 .logo-switches {
     display: inline-flex;
     margin: auto 4px;
+
 }
 
 .lang-switch {
