--- a/assets/css/core/theme-vars.css
+++ b/assets/css/core/theme-vars.css
@@ -10,7 +10,7 @@
     --monospace: "Lucida Console", Monaco, "Consolas", monospace;
 
     --theme: rgb(255, 255, 255);
-    --entry: rgb(255, 255, 255);
+    --entry: rgb(210, 210, 210);
     --primary: rgb(30, 30, 30);
     --primary-dim: rgb(60, 60, 60);
     --secondary: rgb(108, 108, 108);
@@ -27,7 +27,8 @@
     --link-hover-underline-shadow: 0 2px 0 var(--link-hover-underline-color);
     --link-transition: all 0.3s ease;
     --line-yellow: url("data:image/svg+xml;charset=utf-8,%3Csvg preserveAspectRatio='none' width='120' height='6' viewBox='0 0 120 6' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M119 0.8C60 4 50-0.5 1 1.5' stroke='%23fc0' stroke-width='3' fill='none' stroke-linecap='round'/%3E%3C/svg%3E");
-
+    
+    --header-icon: #6243c5;
     /* for type pages theming */
     --signature: var(--primary);
     --signature-bg: var(--secondary);
@@ -53,11 +54,12 @@
     --border: rgb(51, 51, 51);
     --link-background-color: #5242746d;
     --link-color: var(--primary);
-    --link-hover-color: rgb(75, 156, 233);
+    --link-hover-color: rgb(75, 150, 230);
     --link-underline-shadow: 0 1px 0 var(--link-color);
     --link-hover-underline-color: var(--link-hover-color);
     --link-hover-underline-shadow: 0 2px 0 var(--link-hover-underline-color);
 
+    --header-icon: rgb(75, 150, 230);
     /* for type pages theming */
     --signature: var(--primary);
     --signature-bg: var(--secondary);
