--- a/layouts/_default/repository.html
+++ b/layouts/_default/repository.html
@@ -3,6 +3,7 @@
 <header class="page-header">
   <h1>
     {{ .Title }}
+    <i class="fa-solid fa-database"></i>
   </h1>
   {{- if .Description }}
   <div class="post-description">
